@@ -11,21 +11,26 @@ package org.elasticsearch.snapshots;
 import org.elasticsearch.cluster.metadata.RepositoriesMetadata;
 import org.elasticsearch.cluster.metadata.RepositoryMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.health.Diagnosis;
+import org.elasticsearch.health.Diagnosis.Resource.Type;
 import org.elasticsearch.health.HealthIndicatorDetails;
+import org.elasticsearch.health.HealthIndicatorImpact;
 import org.elasticsearch.health.HealthIndicatorResult;
 import org.elasticsearch.health.HealthIndicatorService;
+import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
+import org.elasticsearch.health.node.HealthInfo;
 import org.elasticsearch.repositories.RepositoryData;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 
 import static org.elasticsearch.common.Strings.collectionToDelimitedStringWithLimit;
 import static org.elasticsearch.common.util.CollectionUtils.limitSize;
 import static org.elasticsearch.health.HealthStatus.GREEN;
 import static org.elasticsearch.health.HealthStatus.RED;
-import static org.elasticsearch.health.ServerHealthComponents.SNAPSHOT;
 
 /**
  * This indicator reports health for snapshot repositories.
@@ -39,6 +44,22 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
 
     public static final String NAME = "repository_integrity";
 
+    public static final String HELP_URL = "https://ela.st/fix-repository-integrity";
+
+    public static final String REPOSITORY_CORRUPTED_IMPACT_ID = "repository_corruption";
+
+    public static final Diagnosis.Definition CORRUPTED_REPOSITORY = new Diagnosis.Definition(
+        NAME,
+        "corrupt_repo_integrity",
+        "Multiple clusters are writing to the same repository.",
+        "Remove the repository from the other cluster(s), or mark it as read-only in the other cluster(s), and then re-add the repository"
+            + " to this cluster.",
+        HELP_URL
+    );
+
+    public static final String NO_REPOS_CONFIGURED = "No snapshot repositories configured.";
+    public static final String NO_CORRUPT_REPOS = "No corrupted snapshot repositories.";
+
     private final ClusterService clusterService;
 
     public RepositoryIntegrityHealthIndicatorService(ClusterService clusterService) {
@@ -51,16 +72,17 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
     }
 
     @Override
-    public String component() {
-        return SNAPSHOT;
-    }
-
-    @Override
-    public HealthIndicatorResult calculate(boolean includeDetails) {
+    public HealthIndicatorResult calculate(boolean verbose, int maxAffectedResourcesCount, HealthInfo healthInfo) {
         var snapshotMetadata = clusterService.state().metadata().custom(RepositoriesMetadata.TYPE, RepositoriesMetadata.EMPTY);
 
         if (snapshotMetadata.repositories().isEmpty()) {
-            return createIndicator(GREEN, "No repositories configured.", HealthIndicatorDetails.EMPTY, Collections.emptyList());
+            return createIndicator(
+                GREEN,
+                NO_REPOS_CONFIGURED,
+                HealthIndicatorDetails.EMPTY,
+                Collections.emptyList(),
+                Collections.emptyList()
+            );
         }
 
         var corrupted = snapshotMetadata.repositories()
@@ -75,18 +97,30 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
         if (corrupted.isEmpty()) {
             return createIndicator(
                 GREEN,
-                "No corrupted repositories.",
-                includeDetails
-                    ? new SimpleHealthIndicatorDetails(Map.of("total_repositories", totalRepositories))
-                    : HealthIndicatorDetails.EMPTY,
+                "No corrupted snapshot repositories.",
+                verbose ? new SimpleHealthIndicatorDetails(Map.of("total_repositories", totalRepositories)) : HealthIndicatorDetails.EMPTY,
+                Collections.emptyList(),
                 Collections.emptyList()
             );
         }
-
+        List<HealthIndicatorImpact> impacts = Collections.singletonList(
+            new HealthIndicatorImpact(
+                NAME,
+                REPOSITORY_CORRUPTED_IMPACT_ID,
+                1,
+                String.format(
+                    Locale.ROOT,
+                    "Data in corrupted snapshot repositor%s %s may be lost and cannot be restored.",
+                    corrupted.size() > 1 ? "ies" : "y",
+                    limitSize(corrupted, 10)
+                ),
+                List.of(ImpactArea.BACKUP)
+            )
+        );
         return createIndicator(
             RED,
             createCorruptedRepositorySummary(corrupted),
-            includeDetails
+            verbose
                 ? new SimpleHealthIndicatorDetails(
                     Map.of(
                         "total_repositories",
@@ -98,12 +132,18 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
                     )
                 )
                 : HealthIndicatorDetails.EMPTY,
-            Collections.emptyList()
+            impacts,
+            List.of(
+                new Diagnosis(
+                    CORRUPTED_REPOSITORY,
+                    List.of(new Diagnosis.Resource(Type.SNAPSHOT_REPOSITORY, limitSize(corrupted, maxAffectedResourcesCount)))
+                )
+            )
         );
     }
 
     private static String createCorruptedRepositorySummary(List<String> corrupted) {
-        var message = new StringBuilder().append("Detected [").append(corrupted.size()).append("] corrupted repositories: ");
+        var message = new StringBuilder().append("Detected [").append(corrupted.size()).append("] corrupted snapshot repositories: ");
         collectionToDelimitedStringWithLimit(corrupted, ",", "[", "].", 1024, message);
         return message.toString();
     }
