@@ -11,21 +11,20 @@ package org.elasticsearch.http;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.apache.lucene.util.BytesRef;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.bytes.BytesArray;
-import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.network.NetworkAddress;
 import org.elasticsearch.common.network.NetworkService;
 import org.elasticsearch.common.network.NetworkUtils;
+import org.elasticsearch.common.recycler.Recycler;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.TransportAddress;
-import org.elasticsearch.common.util.MockBigArrays;
 import org.elasticsearch.common.util.MockPageCacheRecycler;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.core.TimeValue;
-import org.elasticsearch.indices.breaker.NoneCircuitBreakerService;
 import org.elasticsearch.rest.RestChannel;
 import org.elasticsearch.rest.RestRequest;
 import org.elasticsearch.rest.RestResponse;
@@ -37,6 +36,8 @@ import org.elasticsearch.test.junit.annotations.TestLogging;
 import org.elasticsearch.test.rest.FakeRestRequest;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.tracing.Tracer;
+import org.elasticsearch.transport.BytesRefRecycler;
 import org.elasticsearch.transport.TransportSettings;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.junit.After;
@@ -65,13 +66,13 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
 
     private NetworkService networkService;
     private ThreadPool threadPool;
-    private MockBigArrays bigArrays;
+    private Recycler<BytesRef> recycler;
 
     @Before
     public void setup() throws Exception {
         networkService = new NetworkService(Collections.emptyList());
         threadPool = new TestThreadPool("test");
-        bigArrays = new MockBigArrays(new MockPageCacheRecycler(Settings.EMPTY), new NoneCircuitBreakerService());
+        recycler = new BytesRefRecycler(new MockPageCacheRecycler(Settings.EMPTY));
     }
 
     @After
@@ -81,7 +82,7 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
         }
         threadPool = null;
         networkService = null;
-        bigArrays = null;
+        recycler = null;
     }
 
     public void testHttpPublishPort() throws Exception {
@@ -157,11 +158,12 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
             AbstractHttpServerTransport transport = new AbstractHttpServerTransport(
                 Settings.EMPTY,
                 networkService,
-                bigArrays,
+                recycler,
                 threadPool,
                 xContentRegistry(),
                 dispatcher,
-                new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS)
+                new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS),
+                Tracer.NOOP
             ) {
 
                 @Override
@@ -224,7 +226,10 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
         try (AbstractHttpServerTransport transport = failureAssertingtHttpServerTransport(clusterSettings, Set.of("Accept"))) {
 
             Map<String, List<String>> headers = new HashMap<>();
-            headers.put("Accept", Collections.singletonList("incorrectheader"));
+            headers.put("Accept", List.of("incorrectHeader"));
+            if (randomBoolean()) {
+                headers.put("Content-Type", List.of("alsoIncorrectHeader"));
+            }
 
             FakeRestRequest.FakeHttpRequest fakeHttpRequest = new FakeRestRequest.FakeHttpRequest(
                 RestRequest.Method.GET,
@@ -237,8 +242,10 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
         }
         try (AbstractHttpServerTransport transport = failureAssertingtHttpServerTransport(clusterSettings, Set.of("Content-Type"))) {
             Map<String, List<String>> headers = new HashMap<>();
-            headers.put("Accept", Collections.singletonList("application/json"));
-            headers.put("Content-Type", Collections.singletonList("incorrectheader"));
+            if (randomBoolean()) {
+                headers.put("Accept", List.of("application/json"));
+            }
+            headers.put("Content-Type", List.of("incorrectHeader"));
 
             FakeRestRequest.FakeHttpRequest fakeHttpRequest = new FakeRestRequest.FakeHttpRequest(
                 RestRequest.Method.GET,
@@ -258,7 +265,7 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
         return new AbstractHttpServerTransport(
             Settings.EMPTY,
             networkService,
-            bigArrays,
+            recycler,
             threadPool,
             xContentRegistry(),
             new HttpServerTransport.Dispatcher() {
@@ -275,7 +282,8 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
                     assertThat(mediaTypeHeaderException.getMessage(), equalTo("Invalid media-type value on headers " + failedHeaderNames));
                 }
             },
-            clusterSettings
+            clusterSettings,
+            Tracer.NOOP
         ) {
             @Override
             protected HttpServerChannel bind(InetSocketAddress hostAddress) {
@@ -311,7 +319,7 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
             AbstractHttpServerTransport transport = new AbstractHttpServerTransport(
                 Settings.EMPTY,
                 networkService,
-                bigArrays,
+                recycler,
                 threadPool,
                 xContentRegistry(),
                 new HttpServerTransport.Dispatcher() {
@@ -325,7 +333,8 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
                         channel.sendResponse(emptyResponse(RestStatus.BAD_REQUEST));
                     }
                 },
-                clusterSettings
+                clusterSettings,
+                Tracer.NOOP
             ) {
                 @Override
                 protected HttpServerChannel bind(InetSocketAddress hostAddress) {
@@ -381,7 +390,9 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
                             + opaqueId
                             + "\\]\\["
                             + (badRequest ? "BAD_REQUEST" : "OK")
-                            + "\\]\\[null\\]\\[0\\] sent response to \\[.*"
+                            + "\\]\\["
+                            + RestResponse.TEXT_CONTENT_TYPE
+                            + "\\]\\[0\\] sent response to \\[.*"
                     )
                 );
 
@@ -459,7 +470,7 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
             AbstractHttpServerTransport transport = new AbstractHttpServerTransport(
                 settings,
                 networkService,
-                bigArrays,
+                recycler,
                 threadPool,
                 xContentRegistry(),
                 new HttpServerTransport.Dispatcher() {
@@ -478,7 +489,8 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
                         channel.sendResponse(emptyResponse(RestStatus.BAD_REQUEST));
                     }
                 },
-                clusterSettings
+                clusterSettings,
+                Tracer.NOOP
             ) {
                 @Override
                 protected HttpServerChannel bind(InetSocketAddress hostAddress) {
@@ -519,7 +531,7 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
             AbstractHttpServerTransport transport = new AbstractHttpServerTransport(
                 Settings.EMPTY,
                 networkService,
-                bigArrays,
+                recycler,
                 threadPool,
                 xContentRegistry(),
                 new HttpServerTransport.Dispatcher() {
@@ -534,7 +546,8 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
                         channel.sendResponse(emptyResponse(RestStatus.BAD_REQUEST));
                     }
                 },
-                new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS)
+                new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS),
+                Tracer.NOOP
             ) {
 
                 @Override
@@ -595,7 +608,7 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
             AbstractHttpServerTransport transport = new AbstractHttpServerTransport(
                 Settings.EMPTY,
                 networkService,
-                bigArrays,
+                recycler,
                 threadPool,
                 xContentRegistry(),
                 new HttpServerTransport.Dispatcher() {
@@ -609,7 +622,8 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
                         channel.sendResponse(emptyResponse(RestStatus.BAD_REQUEST));
                     }
                 },
-                clusterSettings
+                clusterSettings,
+                Tracer.NOOP
             ) {
 
                 @Override
@@ -681,22 +695,7 @@ public class AbstractHttpServerTransportTests extends ESTestCase {
     }
 
     private static RestResponse emptyResponse(RestStatus status) {
-        return new RestResponse() {
-            @Override
-            public String contentType() {
-                return null;
-            }
-
-            @Override
-            public BytesReference content() {
-                return BytesArray.EMPTY;
-            }
-
-            @Override
-            public RestStatus status() {
-                return status;
-            }
-        };
+        return new RestResponse(status, RestResponse.TEXT_CONTENT_TYPE, BytesArray.EMPTY);
     }
 
     private TransportAddress address(String host, int port) throws UnknownHostException {
